<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboard_02"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary_color"
    tools:context=".onboard_2">

    <Button
        android:id="@+id/button_3"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/Accent_color"
        android:text="@string/next"
        android:textColor="@color/Primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="353dp"
        android:layout_height="284dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        app:srcCompat="@drawable/istockphoto_1368994091_612x612" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="362dp"
        android:layout_height="201dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="423dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="227dp"
        android:text="@string/explorediscription"
        android:textColor="@color/Secondary_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="353dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="452dp"
        android:text="@string/ExploreRRfashion"
        android:textColor="@color/Secondary_color"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>