<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboard_02"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary_color"
    tools:context=".Sign_up">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="330dp"
        android:layout_height="279dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/logo13" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:background="@color/grey"
            android:hint="Enter your Email"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/Primary_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:hint="Enter Password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/Primary_color"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/passwordToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:padding="12dp"
                app:srcCompat="@drawable/ic_visibility" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/createaaccount"
                android:textColor="@color/Secondary_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/createaccbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Primary_color"
                android:text="Create Account"
                android:textColor="@color/Secondary_color" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_button1"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/Accent_color"
        android:text="@string/login"
        android:textColor="@color/Primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
